Wed Mar 07 00:45:42 2001  George Lebl <jirka@5z.com>

	* main.c, menu.c, panel.[ch]:  kill orphan drawers, fixes crashes
	  later on

	* basep-widget.c: play the expand sound on autoshow

Tue Mar 06 23:02:53 2001  George Lebl <jirka@5z.com>

	* panel.c: when a directory is dropped and it's not a menu make
	  a launcher that opens a new filemanager window (whatever the
	  filemanager happens to be)

Tue Mar 06 22:33:01 2001  George Lebl <jirka@5z.com>

	* basep-widget.c, foobar-widget.c: when we get a configure event
	  and it ain't what we like we go back to where we belong.  Prevents
	  things from moving us.

Tue Mar 06 18:56:43 2001  George Lebl <jirka@5z.com>

	* launcher.c: correctly translate "%c" and %c in the kde command line
	  perhaps this code should be smarter

Tue Mar 06 18:39:05 2001  George Lebl <jirka@5z.com>

	* panel-util.c: support KDE documentation for the launcher and
	  menu help thingies. So we can read KDE's DocPath thingies.

Tue Mar 06 16:20:26 2001  George Lebl <jirka@5z.com>

	* launcher.[ch], menu.c, applet.c, gnome-panel-properties.desktop,
	  panel-utils.c:  Understand the DocPath field.  Now we can start
	  using it in other .desktops.  Still doesn't understand the kde
	  paths, though that should not be hard if we can guess the KDE
	  documentation path.

Tue Mar 06 11:08:45 2001  George Lebl <jirka@5z.com>

	* basep-widget.c: don't show the panel if hidebuttons are disabled
	  for the drawers case.  I suppose this is not the best fix and it
	  should be in the respecitve panels. Fixes #21963

Sun Mar 04 22:43:22 2001  George Lebl <jirka@5z.com>

	* gnome-run.c: find and set envariomental variables for exec
	  shell style.  Fix a small leak, enable command completion on
	  Ctrl-Tab, if it were on tab it would make keyboard navigation
	  impossible.

Sun Mar 04 14:19:15 2001  George Lebl <jirka@5z.com>

	* global-keys.c: clean up the modifiers patch to actually compile
	  and be more in the panel style of coding.
