@@ -1,3 +1,11 @@
+Wed Mar 07 01:21:52 2001  George Lebl <jirka@5z.com>
+
+	* gnome-run.c, panel-util.[ch], menu.c, applet.c: make a general url
+	  checking function and when a docpath is a full url, just display
+	  it.
+
+	* basep-widget.c, foobar-widget.c: warning fixes
+
 Wed Mar 07 00:45:42 2001  George Lebl <jirka@5z.com>
 
 	* main.c, menu.c, panel.[ch]:  kill orphan drawers, fixes crashes
